# sysup

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  create_release.sh  download.sh
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json
.github/: release-body.md
.github/workflows/: create_release_and_build.yml
src/: app_env.rs  app_error.rs  main.rs  request.rs
src/db/: init_db.sql  mod.rs  model_request.rs  model_skip_request.rs
src/service_install/: linux.rs  mod.rs  windows.rs
