[package]
name = "sysup"
version = "0.0.7"
edition = "2021"
authors = ["Jack Wills <email@mrjackwills.com>"]
description = "Send a push alert when machine starts"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unused_async = "warn"
unwrap_used = "warn"
expect_used = "warn"
todo = "warn"
module_name_repetitions = "allow"
doc_markdown = "allow"
similar_names = "allow"

[dependencies]
clap = { version = "4.5", features = ["derive", "unicode"] }
directories = "5.0"
dotenvy = "0.15"
fd-lock = "4.0"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = [
	"brotli",
	"gzip",
	"json",
	"rustls-tls-native-roots",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", default-features = false, features = [
	"macros",
	"runtime-tokio",
	"sqlite",
] }
thiserror = "1.0"
time = { version = "0.3", features = ["local-offset", "macros"] }
time-tz = "2.0"
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["json"] }
url = "2.5"

[target.'cfg(target_os = "linux")'.dependencies]
sudo = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
auto-launch = "0.5"

[dev-dependencies]
uuid = { version = "1.11", features = ["fast-rng", "v4"] }

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true
debug = false
