[package]
name = "sysup"
version = "0.1.0"
edition = "2024"
authors = ["Jack Wills <email@mrjackwills.com>"]
description = "Send a push alert when machine starts"
rust-version = "1.93.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unused_async = "warn"
unwrap_used = "warn"
expect_used = "warn"
todo = "warn"
module_name_repetitions = "allow"
doc_markdown = "allow"
similar_names = "allow"

[dependencies]
clap = { version = "4.5", features = ["derive", "unicode"] }
directories = "6.0"
dotenvy = "0.15"
fd-lock = "4.0"
futures-util = "0.3"
jiff = { version = "0.2", features = ["tzdb-bundle-always"] }
local-ip-address = "0.6"
reqwest = { version = "0.13", default-features = false, features = [
	"brotli",
	"gzip",
	"json",
	"default-tls"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", default-features = false, features = [
	"macros",
	"runtime-tokio",
	"sqlite",
] }
thiserror = "2.0"
tokio = { version = "1.49", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["json"] }
url = "2.5"

[target.'cfg(target_os = "linux")'.dependencies]
sudo = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
auto-launch = "0.6"

[dev-dependencies]
uuid = { version = "1.21", features = ["fast-rng", "v4"] }

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true
debug = false
opt-level = 2